feature(scx): full integration of statechartx, tests
