# docs/swagger.json
@@ -164,6 +164,12 @@
                     "type": "object",
                     "additionalProperties": true
                 },
+                "filename": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
                 "version": {
                     "type": "string"
                 }
